# VulkanRenderer.rs

./: .gitignore  Cargo.toml  log4rs.yml  renderer_test.cap
shaders/: default.frag  default.vert  text.frag  text.vert
src/: lib.rs  main.rs  renderer.rs
src/renderer/: buffer.rs  camera.rs  context.rs  descriptor.rs  error.rs  light.rs  material.rs  mesh.rs  mod.rs  model.rs  pipeline.rs  queue.rs  render_target.rs  scene.rs  shader_module.rs  shaders.rs  swapchain.rs  text.rs  texture.rs  utils.rs  vertex.rs
src/renderer/mesh/loaders/: obj.rs
src/renderer/model/loaders/: obj.rs
src/renderer/utils/: handle_array.rs  mod.rs  window.rs
