[package]
name = "vulkan_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37"
winit = "0.27"
env_logger = "0.9"
vk-shader-macros = "0.2.8"
gpu-allocator = "0.18.0"
nalgebra = "0.31.1"
nalgebra-glm = "0.17"
memoffset = "0.6.5"
raw-window-handle = "0.5.0"
image = "0.24.3"

[profile.release]
debug = true