[package]
name = "vulkan_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37"
rand = "0.8.5"
winit = "0.27"
vk-shader-macros = "0.2.8"
gpu-allocator = "0.22.0"
nalgebra = "0.31.1"
nalgebra-glm = "0.17"
memoffset = "0.6.5"
raw-window-handle = "0.5.0"
image = "0.24.3"
fontdue = "0.7.2"
backtrace = { version = "0.3", features = ["cpp_demangle"] }
spirv-reflect = "0.2.3"
spirv_headers = "1.5.0"
itertools = "0.10.5"
log = "0.4.17"
log4rs = "1.2.0"
thiserror = "1.0.40"
imgui = "0.11.0"
imgui-rs-vulkan-renderer = { version = "1.9.0", features = ["gpu-allocator"] }
imgui-winit-support = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-metal = "0.3"

[profile.release]
debug = true
